--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch:scss": "sass --watch ./public/stylesheets/style.scss ./public/stylesheets/style.css",
-    "devstart": "npm run watch:scss & nodemon ./bin/www",
-    "serverstart": "set DEBUG=$npm_package_name:* & npm run devstart"
+    "set_debug": "set DEBUG=$npm_package_name:*",
+    "watch_node": "nodemon --ignore ./public",
+    "watch_scss": "sass --no-source-map --watch ./public/stylesheets/style.scss ./public/stylesheets/style.css",
+    "devstart": "npm run set_debug & concurrently \"npm run watch_node\" \"npm run watch_scss\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -24,12 +25,14 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "connect-livereload": "^0.6.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
+    "livereload": "^0.9.3",
     "prettier": "3.0.3",
     "sass": "^1.69.5"
   }
