--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "html-entities": "^2.4.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.0.0",
