--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
