--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "entities": "^4.5.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
