--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dompurify": "^3.0.8",
     "dotenv": "^16.3.1",
     "entities": "^4.5.0",
     "express": "^4.18.2",
@@ -23,6 +24,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
+    "jsdom": "^24.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
