--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-errors": "~1.6.3",
     "jsdom": "^24.0.0",
     "lodash": "^4.17.21",
+    "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
@@ -43,6 +44,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "livereload": "^0.9.3",
     "prettier": "3.0.3",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "supertest": "^6.3.4"
   }
 }
