--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "set_debug": "set DEBUG=$npm_package_name:*",
     "watch_node": "nodemon --ignore ./public --ext js,pug",
     "watch_scss": "sass --no-source-map --watch ./public/stylesheets/style.scss ./public/stylesheets/style.css",
-    "devstart": "npm run set_debug & concurrently \"npm run watch_node\" \"npm run watch_scss\""
+    "devstart": "npm run set_debug & concurrently \"npm run watch_node\" \"npm run watch_scss\"",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -42,6 +43,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.7.0",
     "livereload": "^0.9.3",
     "prettier": "3.0.3",
     "sass": "^1.69.5",
