--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "set_debug": "set DEBUG=$npm_package_name:*",
-    "watch_node": "nodemon --ignore ./public --ext js,pug",
+    "watch_node": "nodemon --ext js,pug",
     "watch_scss": "sass --no-source-map --watch ./public/stylesheets/style.scss ./public/stylesheets/style.css",
     "devstart": "npm run set_debug & concurrently \"npm run watch_node\" \"npm run watch_scss\"",
     "test": "jest"
