--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
-    "express-session": "^1.17.3",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "jsdom": "^24.0.0",
+    "memorystore": "^1.6.7",
     "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
