--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "connect-livereload": "^0.6.1",
+    "css-loader": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -51,6 +52,7 @@
     "jest": "^29.7.0",
     "livereload": "^0.9.3",
     "prettier": "3.0.3",
+    "pug-plugin": "^4.9.9",
     "sass": "^1.69.5",
     "supertest": "^6.3.4",
     "webpack": "^5.90.1",
