--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "jest": "^29.7.0",
     "livereload": "^0.9.3",
     "prettier": "3.0.3",
-    "pug-plugin": "^4.9.9",
     "sass": "^1.69.5",
+    "style-loader": "^3.3.4",
     "supertest": "^6.3.4",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
