--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dompurify": "^3.0.8",
@@ -30,6 +31,7 @@
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "jsdom": "^24.0.0",
+    "livereload": "^0.9.3",
     "memorystore": "^1.6.7",
     "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.0.0",
@@ -41,7 +43,7 @@
     "tinymce": "^6.8.0"
   },
   "devDependencies": {
-    "connect-livereload": "^0.6.1",
+    "@flydotio/dockerfile": "^0.5.2",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -49,7 +51,6 @@
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
-    "livereload": "^0.9.3",
     "prettier": "3.0.3",
     "sass": "^1.69.5",
     "supertest": "^6.3.4",
