--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "prismjs": "^1.29.0",
     "pug": "^3.0.2",
     "tinymce": "^7.1.1"
   },
