--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "set_debug": "DEBUG=$npm_package_name:*",
     "watch_node": "nodemon --ext js,pug",
     "watch_scss": "sass --no-source-map --watch ./public/stylesheets/style.scss ./public/stylesheets/style.css",
     "watch_webpack": "webpack --watch",
-    "dev": "pnpm run set_debug & concurrently \"pnpm run watch_node\" \"pnpm run watch_scss\" \"pnpm run watch_webpack\"",
+    "dev": "DEBUG=$npm_package_name:* concurrently \"pnpm run watch_node\" \"pnpm run watch_scss\" \"pnpm run watch_webpack\"",
     "test": "jest",
     "preinstall": "npx only-allow pnpm"
   },
