--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch_webpack": "webpack --watch",
     "dev": "DEBUG=$npm_package_name:* concurrently \"pnpm watch_node\" \"pnpm watch_scss\" \"pnpm watch_webpack\"",
     "test": "jest",
+    "format_pug": "prettier --write \"**/*.pug\" --plugin=\"@prettier/plugin-pug\"",
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.2",
+    "@prettier/plugin-pug": "^3.2.0",
     "concurrently": "^9.0.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
