--- a/package.json
+++ b/package.json
@@ -17,50 +17,50 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
+    "compression": "^1.8.0",
     "connect-flash": "^0.1.1",
     "connect-livereload": "^0.6.1",
     "debug": "~4.3.7",
-    "dompurify": "^3.2.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.21.1",
+    "dompurify": "^3.2.4",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.1.5",
-    "express-session": "^1.18.0",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.2.0",
     "http-errors": "~1.6.3",
     "jsdom": "^25.0.1",
     "livereload": "^0.9.3",
     "memorystore": "^1.6.7",
-    "mongodb-memory-server": "^9.1.6",
-    "mongoose": "^8.0.0",
+    "mongodb-memory-server": "^9.5.0",
+    "mongoose": "^8.12.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prismjs": "^1.29.0",
-    "pug": "^3.0.2",
-    "tinymce": "^7.5.0"
+    "pug": "^3.0.3",
+    "tinymce": "^7.7.0"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.2",
-    "@prettier/plugin-pug": "^3.2.0",
-    "concurrently": "^9.0.1",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@flydotio/dockerfile": "^0.5.9",
+    "@prettier/plugin-pug": "^3.2.1",
+    "concurrently": "^9.1.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "prettier": "3.0.3",
-    "sass": "^1.69.5",
+    "sass": "^1.85.1",
     "supertest": "^6.3.4",
-    "terser-webpack-plugin": "^5.3.10",
-    "webpack": "^5.90.1",
+    "terser-webpack-plugin": "^5.3.12",
+    "webpack": "^5.98.0",
     "webpack-cli": "^5.1.4"
   }
 }
